--- a/pupularrecipes.html
+++ b/pupularrecipes.html
@@ -8,13 +8,133 @@
 		<!-- HTML% Shiv -->
 		<script src="js/html5shiv.js"></script>
 	</head>
-<div class="page2">
-<body>
-	<header><a href="index.html">Home</a><h2>Popular Recipes</h2></header>
-	<section>
-		<p>Popular Baking Recipes</p>
-		<p>Popular Grill Recipes</p>
-	</section>
-</div>
+	<body>
+		<!--container-->
+	<div id="container">
+		<!--header-->
+			<header>
+					<div class="logo"><img src="images/chefs-hat.png"></div>
+					<div class="title"><h3>Popular Recipes</h3></div>
+					<div class="home"><a href="index.html">Home</a></div>
+			</header>
+    </div><!--end of container-->	 	
 </body>
 </html>
+
+
+<!--i want to try to make the "POPULAR RECIPES" page, be in the middle and the recipes list and all test to wrap and circle around the center object-->
+
+
+
+<!--		
+ <div id="container">
+   header 
+ <div id="header">
+  <div id="logo">Logo</div>
+  <div id="top_info">Top Info</div>
+  <div id="navbar">
+   <ul>
+    <li><a href="#">Youtube</a></li>
+    <li><a href="#">Twitter</a></li>
+    <li><a href="#">Google</a></li>
+    <li><a href="#">MSN</a></li>
+   </ul>
+   </div>
+  </div>
+   content area 
+  <div id="content_area">
+   <div id="banner">Banner</div>
+   <div id="left_col">Left Col Content</div>
+   <div id="right_col">Right Col Content</div>
+  </div>
+   footer 
+  <div id="footer">Footer</div>
+ </div> end container 
+
+body { 
+ background:#ccc; margin:0; 
+}
+#container { 
+ width:600px; 
+ margin:0 auto; 
+ background:#fff; 
+}
+#header { 
+ width:100%; 
+ height:60px; 
+ border-bottom:1px solid #c7c7c7; 
+ background:#333;
+ }
+ 
+#logo { 
+ float:left; 
+ width:40px; 
+ height:40px; 
+ margin:10px; 
+ background:#ccc 
+}
+
+#top_info { 
+ float:right; 
+ width:100px; 
+ height:40px; 
+ background:#666; 
+ border:1px solid #c7c7c7; 
+ margin:10px; 
+}
+
+#navbar { 
+ height:20px; 
+ clear:both; 
+}
+
+#navbar ul { 
+ margin:0; 
+ padding:0; 
+ list-style-type:none; 
+}
+
+#navbar ul li { 
+ padding:10px; 
+ float:left; 
+}
+
+#navbar ul li a { 
+ font-size:12px; 
+ float:left; 
+ float:left;
+ padding:0 0 0 20px; 
+ display:block;
+}
+
+#banner { 
+ background:#666;
+ height:120px; 
+ padding:20px;
+ clear: both;
+}
+#left_col { 
+ float:left; 
+ width:250px; 
+ padding:20px; 
+ height:200px; 
+ border:1px solid #333; 
+ color:#FFF; 
+ background:#000; 
+}
+#right_col { 
+ float:right; 
+ width:250px; 
+ height:200px; 
+ border:1px solid #333; 
+ color:#FFF; 
+ background:#000; 
+ padding:20px; 
+}
+#footer { 
+ padding:20px; 
+ clear:both; 
+}
+  
+-->	
+				
